fixing navbar extra whitespace issue

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,7 @@ details>summary:hover {
   font-weight: bold;
   font-size: largest;
 }
+.scroll{
+  width: 100%;
+  overflow-x: scroll;
+}
